<resources>
    <string name="app_name">IntroGym</string>

    <string name="auth_error_invalid_email_or_password">Неверный email или пароль. Попробуйте снова.</string>
    <string name="auth_error_email_already_registered">Этот email уже зарегистрирован. Войдите в аккаунт.</string>
    <string name="auth_error_session_timeout">Сессия истекла. Пожалуйста, войдите заново.</string>
    <string name="auth_error_unauthorized">У вас нет доступа к этому действию.</string>
    <string name="auth_error_session_still_exist">Активная сессия уже существует.</string>
    <string name="auth_error_invalid_otp">Неверный код подтверждения. Проверьте и попробуйте снова.</string>

    <string name="validation_error_invalid_email_format">Некорректный формат email. Введите правильный адрес.</string>
    <string name="validation_error_invalid_password_format">Некорректный пароль. Убедитесь, что он соответствует требованиям.</string>

    <string name="network_error_no_internet">Нет подключения к интернету. Проверьте сеть.</string>
    <string name="app_error_unknown">Произошла неизвестная ошибка. Попробуйте снова.</string>
    <string name="network_error_request_timeout">Превышено время ожидания. Проверьте соединение и попробуйте снова.</string>
    <string name="network_error_server">Ошибка сервера. Попробуйте позже.</string>
    <string name="validation_error_password_mismatch">Пароли не совпадают. Попробуйте снова.</string>

    <string name="label_exercise_categories">Группы мышц</string>
    <string name="label_exercise_count">Упражнения: %1$s</string>
    <string name="label_exercises">Упражнения</string>
    <string name="label_execution">Выполнение</string>
    <string name="label_tips">Советы</string>
    <string name="step_number">№ %1$s</string>
    <string name="label_search_results">Результаты поиска</string>
    <string name="label_name">Название</string>

    <string name="label_difficulty">Сложность</string>
    <string name="label_equipment">Оборудование</string>
    <string name="label_muscles">Мышцы</string>
    <string name="label_first_step">Ты уже сделал первый шаг</string>
    <string name="label_create_account_text">Создай аккаунт, чтобы сохранять свой прогресс, открывать достижения и тренироваться без ограничений</string>
    <string name="label_your_name">Ваше имя</string>
    <string name="email_example_com">email@example.com</string>
    <string name="label_password">Пароль</string>
    <string name="label_confirm_password">Подтвердите пароль</string>
    <string name="label_min_8_symbols">Минимум 8 символов</string>
    <string name="label_has_upper_letter">Есть заглавная буква</string>
    <string name="label_has_special_symbol">Есть специальный символ</string>
    <string name="label_has_account">Уже есть аккаунт? Войти</string>
    <string name="label_agree_terms">Продолжая, вы соглашаетесь с условиями Политики конфиденциальности</string>
    <string name="label_sign_up">Зарегистрироваться</string>
    <string name="label_sign_in">Войти</string>
    <string name="label_almost_there">Осталось чуть-чуть</string>
    <string name="label_send_otp_description">Мы отправили код проверки на указанную почту. Введите код в поле ниже</string>
    <string name="label_code">Код</string>
    <string name="label_send_code_again">Отправить код повторно</string>
    <string name="label_glad_to_see_again">Рады видеть вас снова!</string>
    <string name="label_sign_in_description">Введите данные, чтобы продолжить тренировки и следить за прогрессом</string>
    <string name="label_has_not_account">Еще нет аккаунта? Зарегистрироваться</string>
    <string name="label_restore_password">Восстановление пароля</string>
    <string name="label_restore_password_description">Введите адрес электронной почты, и мы отправим вам код для восстановления пароля.</string>
    <string name="label_send_otp">Отправить код</string>
    <string name="label_forgot_password_question">Забыли пароль?</string>
    <string name="label_new_password">Новый пароль</string>
    <string name="label_create_new_password_description">Введите новый пароль для вашей учетной записи. Убедитесь, что пароль надежный и соответствует всем требованиям.</string>
    <string name="label_skip">Пропустить</string>
    <string name="label_welcome_to_app">Приветствуем в IntroGym!</string>
    <string name="label_welcome_fragment_description">Мы поможем тебе достичь лучших результатов в тренировках</string>
    <string name="label_next">Далее</string>
    <string name="label_features_fragment_title">Создавай тренировки, планируй их в календаре и выполняй</string>
    <string name="label_features_fragment_description">Достигай. Делись. Вдохновляй</string>
    <string name="label_birthday">Дата рождения</string>
    <string name="label_about_user_fragment_title">Осталось ввести всего пару деталей – и IntroGym готов к старту!</string>
    <string name="label_start">Начать</string>
    <string name="label_here">ЗДЕСЬ</string>
    <string name="label_start_fragment_description">Твой путь к лучшей версии себя начинается</string>
    <string name="label_set_notification_fragment_title">Настоящие чемпионы не пропускают тренировки!</string>
    <string name="label_set_notification_fragment_description">Мы напомним о тренировках и подкинем мотивацию, когда это нужно.</string>
    <string name="label_enable_notifications">Включить уведомления</string>
    <string name="auth_error_failed_to_change_password">Не удалось сменить пароль. Попробуйте позже.</string>
    <string name="label_home">Главная</string>
    <string name="label_workouts">Тренировки</string>
    <string name="label_guide">Справочник</string>
    <string name="label_stats">Статистика</string>
    <string name="label_profile">Профиль</string>
    <string name="label_look">Смотреть</string>
    <string name="label_articles">Статьи</string>
    <string name="label_sections">Разделы</string>
    <string name="label_filter">Фильтр</string>
    <string name="label_apply">Применить</string>
    <string name="label_no_result_title">Ничего не найдено</string>
    <string name="label_no_result_description">По вашему запросу ничего не найдено</string>
    <string name="label_create_workout">Создать тренировку</string>
    <string name="label_your_workouts">Ваши тренировки</string>
    <string name="label_comment">Комментарий</string>
    <string name="label_workout_info_description">Укажите название и, если хотите, комментарий для Вашей тренировки.</string>
    <string name="label_info">Информация</string>
    <string name="label_workout">Тренировка</string>
    <string name="label_skip_sign_up">Пропусить регистрацию</string>
    <string name="label_continue_without_account">Продолжить без аккаунта</string>
    <string name="label_sets">Подходы</string>
    <string name="label_exercise_comment_description">Комментарий для упражнения (необязательно)</string>
    <string name="label_weight">Вес</string>
    <string name="label_reps">Повторения</string>
    <string name="label_time">Время</string>
    <string name="label_distance">Расстояние</string>
    <string name="label_exercise_plan_fields_description">Выберите типы полей для ввода показателей и заполните их желаемыми значениями</string>
    <string name="label_plan">Планирование</string>
    <string name="label_save">Сохранить</string>
    <string name="label_about_exercise">Об упражнении</string>
    <string name="label_edit">Изменить</string>
    <string name="label_delete">Удалить</string>
    <string name="workout_error_empty_name">Тренировка должна иметь название</string>
    <string name="workout_error_has_no_exercises">Тренировка должна содержать хотя бы одно упражнение</string>
    <string name="workout_error_empty_exercise_plan">План упражнений не может быть пустым</string>
    <string name="workout_error_exercise_and_plans_mismatch">Количество упражнений и планов упражнений не совпадает</string>
    <string name="label_workout_comment">Комментарий к тренировке</string>
    <string name="label_workout_name">Название тренировки</string>
    <string name="label_delete_workout">Удалить тренировку</string>
    <string name="label_submit_message_delete_workout">Вы действительно хотите удалить тренировку? Это действие нельзя будет отменить</string>
    <string name="label_cancel">Отмена</string>
    <string name="label_choose_workout">Выберите тренировку</string>
    <string name="label_your_plans">Ваши планы</string>
    <string name="label_add_workout">Добавить тренировку</string>
    <string name="label_workout_log_state_not_started">не начата</string>
    <string name="label_workout_log_state_in_progress">в процессе</string>
    <string name="label_workout_log_state_finished">завершена</string>
    <string name="label_finish">Завершить</string>
    <string name="label_workout_error_already_started">Завершите другую тренировку, чтобы начать новую.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_add_set">Добавить подход</string>
    <string name="label_history_of_sets">История подходов</string>
    <string name="label_effort">Усилие</string>
    <string name="label_empty_list">Список пуст</string>
    <string name="label_create_your_workout_description">Создайте тренировку, чтобы начать отслеживать свои занятия и прогресс.</string>
    <string name="label_press_plus_to_add_workout_at_schedule">Нажмите «+», чтобы добавить тренировку в расписание</string>
    <string name="label_no_workout_available">Нет доступных тренировок</string>
    <string name="label_no_exercises">Нет упражнений</string>
    <string name="label_add_exercise_description">Упражнения — основа тренировки. Начните с добавления одного или нескольких</string>
    <string name="label_progress">Прогресс</string>
    <string name="label_tonnage">Тоннаж</string>
    <string name="label_00_00_00">00:00:00</string>
    <string name="label_0_percent">0%</string>
    <string name="label_0_kg">0.0 кг</string>
    <string name="label_finish_workout">Завершить тренировку</string>
    <string name="label_finish_workout_submit_message">Вы действительно хотите завершить тренировку? Это действие нельзя будет отменить</string>
    <string name="placeholder_kg">%1$s кг</string>
    <string name="label_week">Неделя</string>
    <string name="label_month">Месяц</string>
    <string name="label_year">Год</string>
    <string name="label_average">В среднем</string>
    <string name="label_total_weight">Суммарно поднятый вес</string>
    <string name="label_sqlite_error">Произошла ошибка базы данных приложения.</string>
    <string name="label_logout">Выйти из аккаунта</string>
    <string name="label_joined_at">Присоединился: %1$s</string>
    <string name="label_sign_out_title">Выход из аккаунта</string>
    <string name="label_sign_out_description">Вы уверены, что хотите выйти из аккаунта? После выхода некоторые функции приложения станут недоступны.</string>
    <string name="label_exit">Выйти</string>
    <string name="label_invalid_username">Некорректный формат имени пользователя</string>
    <string name="label_network_error_unknown">Неизвестная ошибка сети. Попробуйте позже</string>
    <string name="label_submit">Подтвердить</string>
    <string name="label_load_profile_failure_message">Не удалось загрузить профиль. Попробуйте позже</string>
    <string name="label_settings">Настройки</string>
    <string name="label_notifications">Уведомления</string>
    <string name="label_dark_theme">Тёмная тема</string>
    <string name="label_muscle_group_stats">Проработка групп мышц</string>
    <string name="label_distance_stats">Пройденное расстояние</string>

</resources>