<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/label_home"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/workoutsFragment"
        android:title="@string/label_workouts"
        android:icon="@drawable/ic_energy"/>

    <item
        android:id="@+id/guide"
        android:title="@string/label_guide"
        android:icon="@drawable/ic_list"/>

    <item
        android:id="@+id/statsFragment"
        android:title="@string/label_stats"
        android:icon="@drawable/ic_stats"/>

    <item
        android:id="@+id/profileFragment"
        android:title="@string/label_profile"
        android:icon="@drawable/ic_profile"/>

</menu>