<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".features.auth.presentation.SignUpFragment">

    <TextView
        android:id="@+id/tv_sign_in_title"
        style="@style/Widget.IntroGym.TextView.Title"
        android:text="@string/label_first_step"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textAppearance="@style/TextAppearance.IntroGym.Title3.Bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sign_in_description"
        style="@style/Widget.IntroGym.TextView.Body"
        android:text="@string/label_create_account_text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.IntroGym.Body.Regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_title" />

    <LinearLayout
        android:id="@+id/ll_text_input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_rounded_plate_filled"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_description">

        <EditText
            android:id="@+id/et_email"
            style="@style/Widget.IntroGym.TextInput"
            android:inputType="textEmailAddress"
            android:hint="@string/email_example_com"
            android:autofillHints="emailAddress"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerColor="?attr/igHintColor"/>

        <EditText
            android:id="@+id/et_password"
            style="@style/Widget.IntroGym.TextInput"
            android:hint="@string/label_password"
            android:inputType="textPassword"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerColor="?attr/igHintColor"/>

        <EditText
            android:id="@+id/et_confirm_password"
            style="@style/Widget.IntroGym.TextInput"
            android:hint="@string/label_confirm_password"
            android:inputType="textPassword"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_error_message"
        style="@style/Widget.IntroGym.TextView.Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_text_input_container"
        android:visibility="gone"
        tools:visibility="visible"
        tools:text="Текст ошибки" />

    <ru.lonelywh1te.introgym.core.ui.views.PasswordValidationView
        android:id="@+id/password_validation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_error_message"
        tools:errorCount="3" />

    <TextView
        android:id="@+id/tv_user_has_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/label_has_account"
        android:textAppearance="@style/TextAppearance.IntroGym.Body.Regular"
        app:layout_constraintBottom_toTopOf="@+id/tv_term_of_use_agreement"
        app:layout_constraintStart_toStartOf="@+id/fl_sign_up_button_container" />

    <TextView
        android:id="@+id/tv_term_of_use_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/label_agree_terms"
        android:textAppearance="@style/TextAppearance.IntroGym.Footnote.Regular"
        app:layout_constraintBottom_toTopOf="@+id/fl_sign_up_button_container"
        app:layout_constraintStart_toStartOf="@+id/fl_sign_up_button_container" />


    <FrameLayout
        android:id="@+id/fl_sign_up_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_skip_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ProgressBar
            android:id="@+id/pb_loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:padding="15dp"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_sign_up"
            style="@style/Widget.IntroGym.Button"
            android:layout_gravity="center"
            android:text="@string/label_sign_up" />

    </FrameLayout>

    <Button
        android:id="@+id/btn_skip_sign_up"
        style="@style/Widget.IntroGym.TextButton.Orange"
        android:layout_gravity="center"
        android:text="@string/label_continue_without_account"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>