<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".features.workout.presentation.WorkoutExercisePlanEditorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_exercise_animation"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            tools:src="@drawable/ic_launcher_background"/>

        <TextView
            android:id="@+id/tv_exercise_name"
            style="@style/Widget.IntroGym.TextView.Title"
            android:textAppearance="@style/TextAppearance.IntroGym.Title2.Bold"
            tools:text="Название упражнения" />

        <ru.lonelywh1te.introgym.core.ui.views.EditTextLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperMessage="@string/label_exercise_comment_description">

            <EditText
                android:id="@+id/et_exercise_comment"
                style="@style/Widget.IntroGym.TextInput"
                android:hint="@string/label_comment"/>

        </ru.lonelywh1te.introgym.core.ui.views.EditTextLayout>

        <LinearLayout
            android:id="@+id/materialButtonToggleGroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_select_weight"
                style="@style/Widget.IntroGym.CheckedButton"
                android:layout_weight="1"
                app:icon="@drawable/ic_weight"
                app:iconSize="30dp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/btn_select_reps"
                style="@style/Widget.IntroGym.CheckedButton"
                android:layout_weight="1"
                app:icon="@drawable/ic_repeat"
                app:iconSize="30dp"/>

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/btn_select_time"
                style="@style/Widget.IntroGym.CheckedButton"
                android:layout_weight="1"
                app:icon="@drawable/ic_time"
                app:iconSize="30dp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/btn_select_distance"
                style="@style/Widget.IntroGym.CheckedButton"
                android:layout_weight="1"
                app:icon="@drawable/ic_distance"
                app:iconSize="30dp"/>

        </LinearLayout>

        <ru.lonelywh1te.introgym.core.ui.views.EditTextLayout
            android:id="@+id/et_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:helperMessage="@string/label_exercise_plan_fields_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_workout_info">

            <EditText
                android:id="@+id/et_plan_sets"
                style="@style/Widget.IntroGym.TextInput"
                android:inputType="number"
                android:maxLength="2"
                android:hint="@string/label_sets"/>

            <EditText
                android:id="@+id/et_plan_weight"
                style="@style/Widget.IntroGym.TextInput"
                android:inputType="numberDecimal"
                android:drawableEnd="@drawable/ic_weight"
                android:maxLength="4"
                android:hint="@string/label_weight"/>

            <EditText
                android:id="@+id/et_plan_reps"
                style="@style/Widget.IntroGym.TextInput"
                android:drawableEnd="@drawable/ic_repeat"
                android:inputType="number"
                android:maxLength="3"
                android:hint="@string/label_reps"/>

            <EditText
                android:id="@+id/et_plan_time"
                android:drawableEnd="@drawable/ic_time"
                style="@style/Widget.IntroGym.TextInput"
                android:focusable="false"
                android:inputType="number"
                android:hint="@string/label_time"/>

            <EditText
                android:id="@+id/et_plan_distance"
                android:drawableEnd="@drawable/ic_distance"
                style="@style/Widget.IntroGym.TextInput"
                android:inputType="number"
                android:maxLength="5"
                android:hint="@string/label_distance"/>

        </ru.lonelywh1te.introgym.core.ui.views.EditTextLayout>
    </LinearLayout>

</ScrollView>