<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".features.workout.presentation.CreateWorkoutFragment">

    <TextView
        android:id="@+id/tv_workout_info"
        style="@style/Widget.IntroGym.TextView.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_info"
        android:textAppearance="@style/TextAppearance.IntroGym.Title2.Bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ru.lonelywh1te.introgym.core.ui.views.EditTextLayout
        android:id="@+id/ll_text_input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperMessage="@string/label_workout_info_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_workout_info">

        <EditText
            android:id="@+id/et_workout_name"
            style="@style/Widget.IntroGym.TextInput"
            android:inputType="textEmailAddress"
            android:hint="@string/label_name"/>

        <EditText
            android:id="@+id/et_workout_description"
            style="@style/Widget.IntroGym.TextInput"
            android:hint="@string/label_comment"/>

    </ru.lonelywh1te.introgym.core.ui.views.EditTextLayout>

    <TextView
        android:id="@+id/tv_workout_exercises"
        style="@style/Widget.IntroGym.TextView.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_exercises"
        android:textAppearance="@style/TextAppearance.IntroGym.Title2.Bold"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_exercise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_text_input_container" />

    <Button
        android:id="@+id/btn_add_exercise"
        style="@style/Widget.IntroGym.IconButton.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_add"
        app:iconGravity="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/tv_workout_exercises"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_text_input_container" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_workout_exercise_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        tools:listitem="@layout/item_exercise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_workout_exercises" />

    <TextView
        android:id="@+id/tv_empty_list_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_add_exercise_description"
        android:textAppearance="@style/TextAppearance.IntroGym.Body.Regular"
        android:textColor="?attr/igHintColor"
        app:layout_constraintBottom_toBottomOf="@+id/rv_workout_exercise_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rv_workout_exercise_items" />


</androidx.constraintlayout.widget.ConstraintLayout>