<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".features.auth.presentation.RestorePasswordFragment">

    <TextView
        android:id="@+id/tv_restore_passsword_title"
        style="@style/Widget.IntroGym.TextView.Title"
        android:text="@string/label_restore_password"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textAppearance="@style/TextAppearance.IntroGym.Title3.Bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_restore_password_description"
        style="@style/Widget.IntroGym.TextView.Body"
        android:text="@string/label_restore_password_description"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.IntroGym.Body.Regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_restore_passsword_title" />


    <ru.lonelywh1te.introgym.core.ui.views.EditTextLayout
        android:id="@+id/ll_text_input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_restore_password_description">

        <EditText
            android:id="@+id/et_email"
            style="@style/Widget.IntroGym.TextInput"
            android:autofillHints="emailAddress"
            android:hint="@string/email_example_com"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password"
            style="@style/Widget.IntroGym.TextInput"
            android:hint="@string/label_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_confirm_password"
            style="@style/Widget.IntroGym.TextInput"
            android:hint="@string/label_confirm_password"
            android:inputType="textPassword" />

    </ru.lonelywh1te.introgym.core.ui.views.EditTextLayout>

    <ru.lonelywh1te.introgym.core.ui.views.PasswordValidationView
        android:id="@+id/password_validation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_text_input_container"
        tools:errorCount="3"
        tools:visibility="visible" />

    <FrameLayout
        android:id="@+id/fl_sign_up_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ProgressBar
            android:id="@+id/pb_loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:padding="15dp"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_submit"
            style="@style/Widget.IntroGym.Button"
            android:layout_gravity="center"
            android:text="@string/label_send_otp" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>